--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="en-us">
 
 <head>
+
     <meta charset="UTF-8">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Nathaniel's Basic Portfolio</title>
+    <title>Nathaniel's Responsive Portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/css-reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -47,7 +49,7 @@
 
     </div>
 
-    <section id="page-contents">
+    <section class="contents" id="page-contents">
 
         <div id="box1">
             <h2 id="aboutme">
