--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,12 @@
 <html lang="en-us">
 
 <head>
+    
     <meta charset="UTF-8">
 
-    <title>Nathaniel's Basic Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Nathaniel's Responsive Portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/css-reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -45,7 +48,7 @@
 
     </div>
     <!-- this is my contact form div container  -->
-    <section id="gallery">
+    <section class="contents" id="gallery">
         <!--these are the divs that contains the label text and image so that they can be styles to have the same height and width  -->
         <header id="box1">
             
